crates/theoremc-macros/tests/expand/moved_referenced_type.stderr
error[E0433]: failed to resolve: could not find `old` in the crate root
  --> tests/expand/moved_referenced_type.rs:11:1
   |
11 | theorem_file!("tests/expand/moved_referenced_type.theorem");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ could not find `old` in the crate root
   |
   = note: this error originates in the macro `theorem_file` (in Nightly builds, run with -Z macro-backtrace for more info)
